--- a/less/main.less
+++ b/less/main.less
@@ -30,7 +30,8 @@ body {
   }
 
   &,
-  h1 { transition: color 0.8s ease; }
+  h1,
+  h1 + p { transition: color 0.8s ease; }
 }
 
 @import 'actions';
