--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @fontWeightBold: 400;
 
 @lightFontColor: #ddd;
+@lightFontColorLighten: lighten(@lightFontColor, 25%);
 @darkFontColor: #333;
 
 @textShadowLight: 0 0.1rem 0.2rem #111;
