--- a/template/option.hbs
+++ b/template/option.hbs
@@ -1,19 +1,39 @@
-<h1>Themes</h1>
-{{#each themes}}
-  <div>
-    <input id="{{@key}}" type="radio" name="{{../theme}}" value="{{@key}}" {{#if this.value}} checked="checked" {{/if}} />
-    <label for="{{@key}}" class="icon-check">{{this.name}}</label> 
-  </div>
-{{/each}}
-
-<hr>
-<h2>Theme Options</h2>
+<ul>
+  <li><i class="icon-tools active" data-content="general_options" >General</i></li>
+  <li><i class="icon-background" data-content="theme_options" >Theme</i></li>
+  <li><i class="icon-info" data-content="credits" >Credits</i></li>
+</ul>
 <div>
-  <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
-  <label for="{{darkFont.name}}" class="icon-check">use dark font color</label>
-</div>
+  <section id="general_options" class="show">
+    <div class="checkbox">
+      <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
+      <label for="{{darkFont.name}}" class="icon-check">use dark font color</label>
+    </div>
 
-<div>
-  <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
-  <label for="{{grayApps.name}}" class="icon-check">use grayscaled app icons</label> 
+    <div class="checkbox">
+      <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
+      <label for="{{grayApps.name}}" class="icon-check">use grayscaled app icons</label> 
+    </div>
+  </section>
+  <section id="theme_options" class="">
+    {{#each themes}}
+      <div class="capture">
+        <input id="{{@key}}" type="radio" name="{{../theme}}" value="{{@key}}" {{#if this.value}} checked="checked" {{/if}} />
+        <label for="{{@key}}" class="icon-check">
+          <div class="img {{this.class}}" alt="theme_preview_{{this.name}}" />
+          <div class="info">
+            <strong>{{this.name}}</strong>
+            {{!-- <div>
+              <span>{{#if this.grayApps}}Uses grayed apps{{/if}}</span>
+              <span>{{#if this.darkFont}}Uses dark font{{/if}}</span>
+            </div> --}}
+          </div>
+        </label> 
+      </div>
+    {{/each}}
+  </section>
+  <section id="credits" class="">
+    Credits
+  </section>
+
 </div>
