splitted options in logic and view

--- a/less/options.less
+++ b/less/options.less
@@ -24,7 +24,7 @@
     left: -2rem;
     top: -1rem;
     z-index: 10003;
-    box-shadow: 0px 3px 8px 1px @shadowColor;
+    border-bottom: 1px solid @darkFontColor;
 
     li {
       list-style: none;
