--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,10 @@ body h1 + p {
   font: normal 11px "Lato", sans-serif;
   font-weight: 300;
   font-size: 1rem;
+  max-width: 7.5rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 #apps.grayscale ul a img {
   transition: -webkit-filter 1s ease;
@@ -417,7 +421,7 @@ body h1 + p {
   left: -2rem;
   top: -1rem;
   z-index: 10003;
-  box-shadow: 0px 3px 8px 1px rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid #444444;
 }
 #options > ul li {
   list-style: none;
