--- a/less/apps.less
+++ b/less/apps.less
@@ -63,6 +63,10 @@
       font: @font;
       font-weight: @fontWeightNormal;
       font-size: 1rem;
+      max-width: 7.5rem;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 
