--- a/less/apps.less
+++ b/less/apps.less
@@ -26,11 +26,11 @@
       top: 3.5rem;
       font-size: 2rem;
       text-indent: 0;
-      transform: scale(1);
-      transition: transform 0.25s ease;
+      -webkit-transform: scale(1);
+      -webkit-transition: -webkit-transform 0.25s ease;
       &.disabled { 
         display: block;
-        transform: scale(0) !important; 
+        -webkit-transform: scale(0) !important; 
         cursor: default !important;
       }
       &:hover { -webkit-transform: scale(1.25); }
@@ -46,7 +46,7 @@
     display: inline-block;
     overflow: hidden;
     margin: 0 1rem 0.5rem 1rem;
-    transition: color 1s ease;
+    -webkit-transition: color 1s ease;
     padding: 0 0.25rem 0.25rem 0.25rem;
     &:hover { color: #fff; }
 
@@ -54,7 +54,7 @@
       width: 64px;
       height: 64px;
       display: inline-block;
-      transition: -webkit-filter 1s ease;
+      -webkit-transition: -webkit-filter 1s ease;
     }
 
     h4 {
@@ -72,7 +72,7 @@
 
   &.grayscale {
     ul a img { 
-      transition: -webkit-filter 1s ease;
+      -webkit-transition: -webkit-filter 1s ease;
       -webkit-filter: grayscale(100%);
     }
     ul a:hover img { -webkit-filter: grayscale(0%); }
