--- a/less/clock.less
+++ b/less/clock.less
@@ -8,7 +8,7 @@
 
   &,
   .flip-clock-wrapper,
-  div.inn { transition: background-color 0.8s ease; }
+  div.inn { -webkit-transition: background-color 0.8s ease; }
 
   h1 {
     position: absolute;
