--- a/less/font.less
+++ b/less/font.less
@@ -44,7 +44,7 @@
     speak: none;
     line-height: 1;
     -webkit-font-smoothing: antialiased;
-    transition: color 0.5s ease;
+    -webkit-transition: color 0.5s ease;
     color: @lightFontColor;
   }
 }
