--- a/less/mail.less
+++ b/less/mail.less
@@ -49,7 +49,7 @@
       list-style: none;
       margin: 0.25rem;
       background: @shadowColor;
-      transition: background 0.5s ease;
+      -webkit-transition: background 0.5s ease;
       border-radius: @borderRadius;
 
       &:hover { background: rgba(0, 0, 0, 0.6); }
