--- a/less/animations.less
+++ b/less/animations.less
@@ -1,17 +1,17 @@
 @-webkit-keyframes spin { 
-  0% { transform: rotate(0deg); } 
-  100% { transform: rotate(359deg); } 
+  0% { -webkit-transform: rotate(0deg); } 
+  100% { -webkit-transform: rotate(359deg); } 
 }
 
 @-webkit-keyframes spinReverse { 
-  0% { transform: rotate(0deg); } 
-  100% { transform: rotate(-359deg); } 
+  0% { -webkit-transform: rotate(0deg); } 
+  100% { -webkit-transform: rotate(-359deg); } 
 }
 
 @-webkit-keyframes moveThumps { 
-  0% { transform: scale(1); } 
-  50% { transform: scale(2); }
-  100% { transform: scale(1); } 
+  0% { -webkit-transform: scale(1); } 
+  50% { -webkit-transform: scale(2); }
+  100% { -webkit-transform: scale(1); } 
 }
 
 @-webkit-keyframes hideOnStart { 
@@ -20,6 +20,6 @@
 }
 
 @-webkit-keyframes fadeIn {
-  0% { opacity:0; }
-  100%{ opacity:1; }
+  0% { opacity: 0; }
+  100%{ opacity: 1; }
 }
