--- a/less/main.less
+++ b/less/main.less
@@ -31,7 +31,7 @@ body {
 
   &,
   h1,
-  h1 + p { transition: color 0.8s ease; }
+  h1 + p { -webkit-transition: color 0.8s ease; }
 }
 
 @import 'actions';
