--- a/less/options.less
+++ b/less/options.less
@@ -6,15 +6,15 @@
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(210,210,210,1)), to(rgba(240,240,240,1)));
   box-shadow: 0px 3px 10px @shadowColor;
   border-radius: @borderRadius 0 0 @borderRadius;
-  transform: translateX(110%);
-  transition: transform .5s ease-out;
+  -webkit-transform: translateX(110%);
+  -webkit-transition: -webkit-transform .5s ease-out;
   z-index: 9999;
   text-align: left;
   padding: 1rem 2rem;
   height: calc(~"100% - 225px");
   min-height: 375px;
   -webkit-animation: hideOnStart 0 linear 1s infinite alternate;
-  &.show { transform: translateX(0%); }
+  &.show { -webkit-transform: translateX(0%); }
 
   > ul {
     width: calc(~"100% + 4rem");
@@ -37,7 +37,7 @@
       i {
         padding-top: 1rem;
         font-size: 1.25rem;
-        transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
+        -webkit-transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
         cursor: pointer;
         height: 50px;
         display: block;
@@ -71,11 +71,11 @@
       height: 100%;
       overflow-y: auto;
       overflow-x: hidden;
-      transition: -webkit-transform 0.5s ease;
+      -webkit-transition: -webkit-transform 0.5s ease;
       -webkit-transform: translateX(110%);
       &.show { 
         -webkit-transform: translateX(0); 
-        transition: -webkit-transform 0.5s 0.5s ease;
+        -webkit-transition: -webkit-transform 0.5s 0.5s ease;
       }
     }
   }
@@ -115,7 +115,7 @@
       color: @lightFontColor;
       z-index: 20;
       font-size: 1.25rem;
-      transition: opacity 0.5s ease;
+      -webkit-transition: opacity 0.5s ease;
       top: 0.2rem;
       left: 0.15rem;
     }
@@ -139,7 +139,7 @@
         bottom: 0;
         right: 0;
         z-index: 10002;
-        transition: opacity 0.5s ease;
+        -webkit-transition: opacity 0.5s ease;
       }
 
       > .info,
@@ -150,7 +150,7 @@
         width: 100%;
         height: 100%;
         border-radius: @borderRadius;
-        transition: -webkit-transform 0.5s ease;
+        -webkit-transition: -webkit-transform 0.5s ease;
       }
 
       > .img {
