--- a/less/main.less
+++ b/less/main.less
@@ -39,4 +39,6 @@ body {
 @import 'apps';
 @import 'mail';
 @import 'options';
+@import 'options-input';
+@import 'options-contributors';
 @import 'theme';
