--- a/less/options.less
+++ b/less/options.less
@@ -16,6 +16,7 @@
   -webkit-animation: hideOnStart 0 linear 1s infinite alternate;
   &.show { -webkit-transform: translateX(0%); }
 
+  //options header
   > ul {
     width: calc(~"100% + 4rem");
     margin: 0;
@@ -59,10 +60,11 @@
     }
   }
 
+  //options content
   > div {
     position: relative;
     margin: -1rem -2rem; 
-    height: calc(~"100% - 55px");
+    height: calc(~"100% - 130px");
 
     section {
       position: absolute;
@@ -80,115 +82,24 @@
     }
   }
 
-  input { 
-    display: none;
-    &:checked + label:before { opacity: 1; }
-  }
+  #credits {
+    > ul {
+      margin: 0;
+      padding: 0;
 
-  .checkbox label {
-    cursor: pointer;
-    font-size: 1.4rem;
-    position: relative;
-    line-height: 2rem;
-    padding-left: 2rem;
-    color: @darkFontColor;
+      li { 
+        list-style: none; 
+        color: @darkFontColor;
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
 
-    &:after,
-    &:before {
-      position: absolute;
-      left: 0;
-      top: 0.15rem;
-    }
-
-    &:after {
-      content: '';
-      width: 24px;
-      height: 24px;
-      background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
-      border-radius: @borderRadius;
-      box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
-      display: inline-block;
-      z-index: 10;
-    }
-    &:before { 
-      opacity: 0;
-      color: @lightFontColor;
-      z-index: 20;
-      font-size: 1.25rem;
-      -webkit-transition: opacity 0.5s ease;
-      top: 0.2rem;
-      left: 0.15rem;
-    }
-  }
-
-  #theme_options { text-align: center; }
-  .capture {
-    display: inline-block; 
-    &:nth-child(odd) { margin: 0 1rem 1rem 0; }
-    label {
-      position: relative;
-      display: inline-block;
-      height: 175px;
-      width: 175px;
-      cursor: pointer;
-
-      &:before {
-        opacity: 0;
-        position: absolute;
-        font-size: 3rem;
-        bottom: 0;
-        right: 0;
-        z-index: 10002;
-        -webkit-transition: opacity 0.5s ease;
-      }
-
-      > .info,
-      > .img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: @borderRadius;
-        -webkit-transition: -webkit-transform 0.5s ease;
-      }
-
-      > .img {
-        z-index: 10001;
-      }
-
-      > .info {
-        position: absolute;
-        z-index: 10000;
-        background-color: darken(@darkFontColor, 15%);
-        color: @lightFontColor;
-        -webkit-transform: scale(0.65);
-        > strong {
-          position: absolute;
-          top: 0;
-          font-size: 1.25rem;
-          font-weight: 300;
-          left: 0;
-          text-align: center;
-          width: 100%;
-        }
-        > div {
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-
-          > span {
-            display: inline-block;
-            width: 45%;
-            text-align: center;
-            &:first-of-type { margin-right: 0.5rem; }
-          }
+        a {
+          display: block;
+          margin-left: 0.5rem;
+          color: #063457;
+          &:hover { text-decoration: underline; }
         }
       }
-
-      &:hover .img { -webkit-transform: scale(0.65); }
-      &:hover .info { -webkit-transform: scale(1); }
     }
   }
 }
